--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,71 +1,123 @@
-/** CSS STYLE **/
-.hello {
-  display: block;
+:root {
+  /* colors */
+  --white: #fff;
+  --sheer-white: #d7ccc0;
+  --light: #f5f4f0;
+  --main: #fe8a02;
+  --main-dark: #42413c;
+  --dark: #2a2626;
+  --sheer-dark: #908d8b;
+  --brown: #b09a81;
+  --blue: #1085c5;
+}
 
-  color: #fff;
-}
 body {
+  width: 100vw;
+  justify-content: center;
+  color: var(--dark);
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.6em;
-  color: #2a2626;
+  margin: 0;
 }
+
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Roboto", sans-serif;
+h3 {
   line-height: 1.2em;
+  font-family: Neucha, sans-serif;
 }
+
 h1 {
   font-size: 72px;
 }
+
 h2 {
   font-size: 60px;
 }
+
 h3 {
   font-size: 34px;
 }
-section {
-  max-width: 1110px;
-  align-content: center;
-  margin: 100px 0 100px;
+
+p {
+  margin: 0;
 }
-head {
-  background-color: #fff;
-  width: auto;
-  height: auto;
-}
-.color-white {
-  color: #fff;
-}
-.color-translucent-white {
-  color: #d7ccc0;
-}
-.color-bright {
-  color: #f5f4f0;
-}
-.color-main {
-  color: fe8a02;
-}
-.color-maint-dark {
-  color: #42413c;
-}
-.color-dark {
-  color: #2a2626;
-}
-.color-translucent-dark {
-  color: #908d8b;
-}
-.color-brown {
-  color: #b09a81;
-}
-.color-blue {
-  color: #1085c5;
-}
-.wrapper {
-  min-height: 100%;
+
+/* header */
+
+.header {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
   overflow: hidden;
+  background: var(--light);
+}
+
+.header::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../imgs/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.1;
+  content: "";
+}
+
+.content {
+  width: 1110px;
+  position: relative;
+  padding: 100px 0;
+}
+
+.header-title {
+  position: absolute;
+  z-index: 2;
+  margin-top: 0;
+  margin-bottom: 185px;
+}
+
+.text-orange {
+  color: var(--main);
+}
+
+.main-img {
+  position: absolute;
+  top: 55px;
+  right: -270px;
+  height: 525px;
+  z-index: 1;
+}
+
+.header-text {
+  display: flex;
+  column-count: 2;
+  margin: 0;
+  margin-top: 443px;
+  column-gap: 30px;
+}
+
+.left-text,
+.right-text {
+  width: 540px;
+}
+
+.button-detail {
+  display: inline-block;
+  margin-top: 40px;
+  padding: 12px 24px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--white);
+  font-weight: bold;
+  background-color: var(--main);
+}
+
+.button-detail:hover {
+  background-color: #ea7600;
 }
