--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,7 +74,12 @@ p {
   position: relative;
   padding: 100px 0;
 }
-
+section {
+  width: 100%;
+  align-items: center;
+  margin: 100px 0 100px;
+  text-align: center;
+}
 .header-title {
   position: absolute;
   z-index: 2;
@@ -91,7 +96,7 @@ p {
   top: 55px;
   right: -270px;
   height: 525px;
-  z-index: 1;
+  z-index: 0;
 }
 
 .header-text {
@@ -121,3 +126,10 @@ p {
 .button-detail:hover {
   background-color: #ea7600;
 }
+.marg {
+  margin-bottom: 30px;
+}
+iframe {
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
+}
+/* video-section */
